--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,44 @@
+:root {
+  --primaryFont: "Ubuntu", sans-serif;
+  --secondaryFont: "Coroman Garamond", sans-serif;
+}
+
 *,
 ::before,
 ::after {
   box-sizing: border-box;
 }
 
-html {
-  font-family: sans-serif;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: var(--secondaryFont);
+  background-color: rgb(197, 197, 197);
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+input,
+button {
+  font: inherit;
+  padding: 0;
+}
+
+button {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+
+h1 {
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
 }
