--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,5 +1,5 @@
 .navigation-list.active {
-  border-bottom: 2px solid var(--white);
+  border-bottom: 2px solid var(--detailColor);
 }
 
 .main-container {
@@ -9,7 +9,7 @@
   flex-direction: row;
   align-items: center;
   padding: 10px;
-  border-top: 1px solid #fff;
+  border-top: 1px solid var(--detailColor);
 }
 
 .navigation-list {
