Add css responsive styles

--- a/src/components/RobotsList/RobotsList.css
+++ b/src/components/RobotsList/RobotsList.css
@@ -4,3 +4,24 @@
   color: var(--white);
   text-align: center;
 }
+
+.robots-list {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) and (max-width: 850px) {
+  .robots-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+}
+
+@media (min-width: 850px) {
+  .robots-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+  }
+}
