--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,3 +21,11 @@
   width: 40px;
   height: 40px;
 }
+
+@media (min-width: 768px) and (max-width: 2440px) {
+  .header-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
