--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,5 +1,6 @@
 .navigation-list.active {
   border-bottom: 2px solid var(--detailColor);
+  cursor: pointer;
 }
 
 .main-container {
@@ -18,4 +19,5 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  padding-top: 5px;
 }
