--- a/src/components/RobotCard/RobotCard.css
+++ b/src/components/RobotCard/RobotCard.css
@@ -11,8 +11,8 @@
 
 .robot__image {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: 290px;
+  height: 165px;
   border: 3px solid var(--detailColor);
   border-radius: 10px;
   gap: 5px;
