--- a/src/components/RobotsList/RobotsList.css
+++ b/src/components/RobotsList/RobotsList.css
@@ -8,6 +8,7 @@
 .robots-list {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width: 768px) and (max-width: 850px) {
