--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,6 +9,13 @@
   background-color: rgb(29, 27, 27);
 }
 
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
 .header-title {
   text-transform: uppercase;
   font-size: 20px;
@@ -22,10 +29,96 @@
   height: 40px;
 }
 
-@media (min-width: 768px) and (max-width: 2440px) {
-  .header-container {
+.login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid var(--detailColor);
+  color: var(--white);
+  padding: 10px;
+  align-items: center;
+  width: 75%;
+  font-size: 12px;
+  border-radius: 10px;
+}
+
+.logout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid var(--detailColor);
+  color: var(--white);
+  padding: 10px;
+  align-items: center;
+  width: 75%;
+  font-size: 12px;
+  border-radius: 10px;
+}
+
+.header-login {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 5px;
+  padding: 10px;
+  align-items: center;
+  text-align: center;
+  width: 75%;
+}
+
+.login-user {
+  display: flex;
+  flex-direction: row-reverse;
+  font-family: var(--primaryFont);
+  color: var(--detailColor);
+  font-size: 12px;
+  gap: 10px;
+  padding-top: 10px;
+}
+
+@media (min-width: 400px) {
+  .header-login {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    padding: 10px;
+    align-items: center;
+    text-align: center;
+    width: 75%;
+    justify-content: flex-end;
+  }
+
+  .logout {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    border: 1px solid var(--detailColor);
+    color: var(--white);
+    padding: 10px;
+    align-items: center;
+    width: 120px;
+    height: 36px;
+    font-size: 12px;
+    border-radius: 10px;
+  }
+
+  .login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid var(--detailColor);
+    color: var(--white);
+    padding: 10px;
+    align-items: center;
+    width: 120px;
+    height: 36px;
+    font-size: 12px;
+    border-radius: 10px;
+  }
+
+  .header-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
   }
 }
