--- a/src/components/NewRobotForm/NewRobotForm.css
+++ b/src/components/NewRobotForm/NewRobotForm.css
@@ -42,3 +42,21 @@
 .form__button:hover {
   background-color: var(--detailColor);
 }
+
+.logout-title {
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--white);
+  font-family: var(--secondaryFont);
+  margin-top: 40px;
+  line-height: 65px;
+  height: 100vh;
+}
+
+.create-title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: var(--white);
+  font-family: var(--secondaryFont);
+}
